// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with marginEnd if not last in the row 1`] = `
<Touchable
  borderlessRipple={false}
  disabled={false}
  onPress={[Function]}
  rippleColor="rgba(0, 0, 0, .32)"
>
  <NetworkImageWithContext
    resizeMode="cover"
    source={
      Object {
        "uri": "http://.../",
      }
    }
    style={
      Object {
        "height": 10,
        "marginBottom": 2,
        "marginEnd": 5,
        "width": 10,
      }
    }
  />
</Touchable>
`;

exports[`renders without marginEnd if last in the row 1`] = `
<Touchable
  borderlessRipple={false}
  disabled={false}
  onPress={[Function]}
  rippleColor="rgba(0, 0, 0, .32)"
>
  <NetworkImageWithContext
    resizeMode="cover"
    source={
      Object {
        "uri": "http://.../",
      }
    }
    style={
      Object {
        "height": 10,
        "marginBottom": 2,
        "width": 10,
      }
    }
  />
</Touchable>
`;
